# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import diagnoseRouter from './diagnose';
 import notificationsRouter from './notifications';
 import favoritesRouter from "./favorites";
 import contentRouter from "./content";
+import profileRouter from "./profile";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(diagnoseRouter);
 router.use(notificationsRouter);
 router.use(favoritesRouter);
 router.use(contentRouter);
+  router.use(profileRouter);
+  router.use(storageRouter);
 
 export default router;
